--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+amd64-microcode (1.20120910-1) unstable; urgency=medium
+
+  * AMD microcode release 20120910
+    + updated microcode:
+      sig 0x00600F12, id 0x06000629: errata (+) 691, 709, 740;
+    + new microcode:
+      sig 0x00610F01, id 0x06001119: errata 671, 686, 697, 698, 699, 704, 709,
+          734, 740;
+    + This update adds critical errata fixes for commonly used features.
+      The hit probability of these errata is unknown to the Debian maintainer.
+  * README.Debian: mention module-init-tools, not just kmod.  This is useful
+    when backporting to Debian Squeeze
+  * debian/control: add Vcs-* fields
+
+ -- Henrique de Moraes Holschuh <hmh@debian.org>  Fri, 14 Sep 2012 15:39:37 -0300
+
 amd64-microcode (1.20120117-2) unstable; urgency=low
 
   * debian/control: priority of this package should be standard,
