--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+amd64-microcode (1.20120910-2) unstable; urgency=medium
+
+  * initramfs: work around initramfs-tools bug #688794.
+    Use "_" in place of "+-." for the initramfs script name.  This works
+    around a PANIC during boot when the initramfs was created in a system
+    with noexec $TMPDIR.
+
+ -- Henrique de Moraes Holschuh <hmh@debian.org>  Tue, 09 Oct 2012 08:18:01 -0300
+
 amd64-microcode (1.20120910-1) unstable; urgency=medium
 
   * AMD microcode release 20120910
