Upstream version 1.20131007 built from linux-firmware
Compose a 1.20131007 release using data from linux-firmware
and an yet-to-be-merged patch with the README data.

    commit 31f6b3076bab3c4b65f67fdb232f4579ed828b4f
    Author: Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>
    Date:   Wed Jul 10 19:42:56 2013 -0500

    linux-firmware: Add AMD microcode patch firmware files

    For AMD Families 10h ~ 14h Processors
    file:   amd-ucode/microcode_amd.bin
    md5sum: 55ae79b82cbfddcf7142058be3c9ec2d

    For AMD Family 15h Processors
    file:   amd-ucode/microcode_amd_fam15h.bin
    md5sum: 122ac7e56442c2b7c28eb26978b2d57c

    Version: 07_10_2013

    Signed-off-by: Sherry Hurwitz <sherry.hurwitz@amd.com>
    Signed-off-by: Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>
    [bwh: Include version in WHENCE and GPG signatures as separate files]
    Signed-off-by: Ben Hutchings <ben@decadent.org.uk>

README files from:
https://lkml.org/lkml/2013/7/19/765

Signed-off-by: Henrique de Moraes Holschuh <hmh@hmh.eng.br>

--- a/README
+++ b/README
@@ -21,14 +21,16 @@ The container files include following microcode patches:
     mc_patch_010000DA_PUB-v1/mc_patch_010000DA.asm
     mc_patch_010000DB_PUB-v1/mc_patch_010000DB.asm
     mc_patch_010000DC_PUB-v1/mc_patch_010000DC.asm
+    mc_patch_02000032_PUB-v3/mc_patch_02000032.asm
     mc_patch_03000027_PUB-v1/mc_patch_03000027.asm
-    mc_patch_05000028_PUB-v3/mc_patch_05000028.asm
-    mc_patch_0500010D_PUB-v1/mc_patch_0500010D.asm
-    mc_patch_06000629_PUB-v1/mc_patch_06000629.asm
-    mc_patch_06001119_PUB-v1/mc_patch_06001119.asm
+    mc_patch_05000029_PUB-v1/mc_patch_05000029.asm
+    mc_patch_05000119_PUB-v1/mc_patch_05000119.asm
+    mc_patch_0600063D_PUB-v1/mc_patch_0600063D.asm
+    mc_patch_06000822_PUB-v1/mc_patch_06000822.asm
+    mc_patch_06001119_PUB-v2/mc_patch_06001119.asm
 
 ***********************************************************************
-Copyright 2008, 2012 ADVANCED MICRO DEVICES, INC.  All Rights Reserved.
+Copyright 2008-2013 ADVANCED MICRO DEVICES, INC.  All Rights Reserved.
 
 AMD is granting you permission to use this software and documentation
 (if any) (collectively, the “Materials”) pursuant to the terms and
@@ -41,78 +43,4 @@ conditions of the Software License Agreement, you do not have
 permission to use any portion of these Materials.  If you do not have
 a copy of the Software License Agreement, contact your AMD
 representative for a copy.
-
-LIMITATION OF LIABILITY: THE MATERIALS ARE PROVIDED “AS IS” WITHOUT
-ANY EXPRESS OR IMPLIED WARRANTY OF ANY KIND INCLUDING WARRANTIES OF
-MERCHANTABILITY, NONINFRINGEMENT OF THIRD-PARTY INTELLECTUAL PROPERTY,
-TITLE, OR FITNESS FOR ANY PARTICULAR PURPOSE, OR THOSE ARISING FROM
-CUSTOM OF TRADE OR COURSE OF USAGE.
-
-FOR CLARIFICATION, THE ENTIRE RISK ARISING OUT OF USE OR PERFORMANCE
-OF THE MATERIALS REMAINS WITH YOU.  AMD DOES NOT WARRANT, GUARANTEE,
-OR MAKE ANY REPRESENTATIONS AS TO THE CORRECTNESS, ACCURACY,
-COMPLETENESS, QUALITY, OR RELIABILITY OF THE MATERIALS.  AMD DOES NOT
-WARRANT THAT OPERATION OF THE MATERIALS WILL BE UNINTERRUPTED OR
-ERROR-FREE.  YOU ARE RESPONSIBLE FOR DETERMINING THE APPROPRIATENESS
-OF USING THE SOFTWARE AND ASSUME ALL RISKS ASSOCIATED WITH THE USE OF
-THE MATERIALS, INCLUDING BUT NOT LIMITED TO THE RISKS OF PROGRAM
-ERRORS, DAMAGE TO OR LOSS OF DATA, PROGRAMS OR EQUIPMENT, AND
-UNAVAILABILITY OR INTERRUPTION OF OPERATIONS.  Some jurisdictions do
-not allow for the exclusion or limitation of implied warranties, so
-the above limitations or exclusions may not apply to you.
-
-IN NO EVENT SHALL AMD OR ITS DIRECTORS, OFFICERS, EMPLOYEES AND
-AGENTS, ITS SUPPLIERS OR ITS LICENSORS BE LIABLE TO YOU OR ANY THIRD
-PARTIES IN RECEIPT OF THE MATERIALS UNDER ANY THEORY OF LIABILITY,
-WHETHER EQUITABLE, LEGAL OR COMMON LAW ACTION ARISING HEREUNDER FOR
-CONTRACT, STRICT LIABILITY, INDEMNITY, TORT (INCLUDING NEGLIGENCE), OR
-OTHERWISE FOR DAMAGES WHICH, IN THE AGGREGATE EXCEED TEN DOLLARS
-($10.00).  IN NO EVENT SHALL AMD BE LIABLE FOR ANY CONSEQUENTIAL,
-INCIDENTAL, PUNITIVE OR SPECIAL DAMAGES, INCLUDING, BUT NOT LIMITED TO
-LOSS OF PROFITS, BUSINESS INTERRUPTION, OR LOSS OF INFORMATION ARISING
-OUT OF THE USE OF OR INABILITY TO USE THE MATERIALS, EVEN IF AMD HAS
-BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.  BY USING THE
-MATERIALS WITHOUT CHARGE, YOU ACCEPT THIS ALLOCATION OF RISK.  Because
-some jurisdictions prohibit the exclusion or limitation of liability
-for consequential or incidental damages, the above limitation may not
-apply to you.
-
-AMD does not assume any responsibility for any errors which may appear
-in the Materials or any other related information provided to you by
-AMD, or result from use of the Materials or any related information.
-
-You agree that you will not reverse engineer or decompile the
-Materials, in whole or in part.
-
-NO SUPPORT OBLIGATION: AMD is not obligated to furnish, support, or
-make any further information, software, technical information,
-know-how, or show-how available to you.  Additionally, AMD retains the
-right to modify the Materials at any time, without notice, and is not
-obligated to provide such modified Materials to you.
-
-U.S. GOVERNMENT RESTRICTED RIGHTS: The Materials are provided with
-"RESTRICTED RIGHTS." Use, duplication, or disclosure by the Government
-is subject to the restrictions as set forth in FAR 52.227-14 and
-DFAR252.227-7013, et seq., or its successor.  Use of the Materials by
-the Government constitutes acknowledgement of AMD's proprietary rights
-in them.
-
-EXPORT RESTRICTIONS: You shall adhere to all applicable U.S.,
-European, and other export laws, including but not limited to the
-U.S. Export Administration Regulations (“EAR”), (15 C.F.R. Sections
-730 through 774), and E.U. Council Regulation (EC) No 1334/2000 of 22
-June 2000.  Further, pursuant to Section 740.6 of the EAR, You hereby
-certify that, except pursuant to a license granted by the United
-States Department of Commerce Bureau of Industry and Security or as
-otherwise permitted pursuant to a License Exception under the EAR, You
-will not (1) export, re-export or release to a national of a country
-in Country Groups D:1, E:1 or E:2 any restricted technology, software,
-or source code it receives from AMD, or (2) export to Country Groups
-D:1, E:1 or E:2 the direct product of such technology or software, if
-such foreign produced direct product is subject to national security
-controls as identified on the Commerce Control List (currently found
-in Supplement 1 to Part 774 of EAR).  For the most current Country
-Group listings, or for additional information about the EAR or Your
-obligations under those regulations, please refer to the U.S. Bureau
-of Industry and Security’s website at http://www.bis.doc.gov/.
 
