--- a/debian/install
+++ b/debian/install
@@ -1,2 +1,2 @@
-microcode_amd.bin		/lib/firmware/amd-ucode
-microcode_amd_fam15h.bin	/lib/firmware/amd-ucode
+microcode_amd.bin	/lib/firmware/amd-ucode
+microcode_amd_fam*.bin	/lib/firmware/amd-ucode
