Upstream release 20180515 built from linux-firmware
Compose a 20180515 release from linux-firmware,
https://git.kernel.org/pub/scm/linux/kernel/git/firmware/linux-firmware.git

    commit 77101513943ef198e2050667c87abf19e6cbb1d8
    Author: Sherry Hurwitz <sherry.hurwitz@amd.com>
    Date:   Wed May 16 18:10:48 2018 -0500

	linux-firmware: Update AMD cpu microcode

	* Add AMD cpu microcode for processor family 17h
	* Update AMD cpu microcode for processor family 15h
	* Update the AMD cpu microcode license copyright
	* Add a Version for both microcode family 15h and 17h

	Key Name        = AMD Microcode Signing Key (for signing microcode container files only)
	Key ID          = F328AE73
	Key Fingerprint = FC7C 6C50 5DAF CC14 7183 57CA E4BE 5339 F328 AE73

	Signed-off-by: Sherry Hurwitz <sherry.hurwitz@amd.com>
	Signed-off-by: Josh Boyer <jwboyer@kernel.org>

    commit 5f8ca0c1db6106a2d6d7e85eee778917ff03c3de
    Author: Sherry Hurwitz <sherry.hurwitz@amd.com>
    Date:   Thu Mar 17 01:56:11 2016 -0500

	linux-firmware: Update AMD microcode patch firmware

	For AMD Family 15h Processors to fix bugs in prior microcode patch
	file: amd-ucode/microcode_amd_fam15h.bin
	md5sum: 2384ef1d8ec8ca3930b62d82ea5a3813

	Version: 2016_03_16

	Signed-off-by: Sherry Hurwitz <sherry.hurwitz@amd.com>
	Signed-off-by: Kyle McMartin <kyle@kernel.org>

New Microcodes:
sig 0x00800f12, patch id 0x08001227, 2018-02-09

Updated Microcodes:
sig 0x00600f12, patch id 0x0600063e, 2018-02-07
sig 0x00600f20, patch id 0x06000852, 2018-02-06

Removed Microcodes:
sig 0x00610f01, patch id 0x06001119, 2012-07-13

--- a/README
+++ b/README
@@ -1,6 +1,23 @@
 This amd64-microcode release was based on the linux-firmware tree.
 
 From: Sherry Hurwitz <sherry.hurwitz@amd.com>
+Subject: [PATCH 1/1] linux-firmware: Update AMD cpu microcode
+Date:   Wed May 16 18:10:48 2018 -0500
+
+    linux-firmware: Update AMD cpu microcode
+
+    * Add AMD cpu microcode for processor family 17h
+    * Update AMD cpu microcode for processor family 15h
+    * Update the AMD cpu microcode license copyright
+    * Add a Version for both microcode family 15h and 17h
+
+    Key Name        = AMD Microcode Signing Key (for signing microcode container files only)
+    Key ID          = F328AE73
+    Key Fingerprint = FC7C 6C50 5DAF CC14 7183 57CA E4BE 5339 F328 AE73
+
+    Signed-off-by: Sherry Hurwitz <sherry.hurwitz@amd.com>
+
+From: Sherry Hurwitz <sherry.hurwitz@amd.com>
 Subject: [PATCH 1/1] linux-firmware: Update AMD microcode patch firmware
 Date: 2016-03-17 06:56:11 GMT
 
