--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+amd64-microcode (3.20181128.1) unstable; urgency=medium
+
+  * New microcode update packages from AMD upstream:
+    + New Microcodes:
+      sig 0x00800f82, patch id 0x0800820b, 2018-06-20
+  * README: update for new release
+
+ -- Henrique de Moraes Holschuh <hmh@debian.org>  Sat, 15 Dec 2018 18:42:12 -0200
+
 amd64-microcode (3.20180524.1) unstable; urgency=high
 
   * New microcode update packages from AMD upstream:
